// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple  expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $23.57
  </p>
</div>
`;
